# circuit_analyzer

./: .dockerignore  .env  .gitignore  AGENTS.md  README.md  bashrc  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
api/: Dockerfile  requirements.txt
api/app/: main.py
api/app/routers/: patterns.py  query.py
data/: seed.ttl
patterns/: README.md  inv.subckt
specs/: circuit.spec.md
specs/001-checklist/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-checklist/checklists/: ontology.md
specs/001-checklist/contracts/: api.yaml  graphdb-repo-config.json
tests/fixtures/: esd_single_diode.cdl  lv_mos_direct_pad.cdl
