[tool.poetry]
name = "circuit-analyzer"
version = "0.1.0"
description = "Ontology-first CDL ingestion, pattern authoring, and ESD assessment toolkit"
authors = ["Cloud User <cloud@example.com>"]
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
rdflib = "^7.0.0"
pyshacl = "^0.23.0"
SPARQLWrapper = "^2.0.0"
requests = "^2.32.3"
typer = { extras = ["all"], version = "^0.9.0" }
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.1"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
